# sfarzo

./: .gitignore  AI_CONTEXT.md  CMakeLists.txt  README.md
scripts/: build.sh  gen_loading_preview.sh  install_plugin.sh  run_only_ui_with_hot_reload.sh  run_standalone.sh
src/: LoadingPreview.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp  ui
ui/: .gitignore  settings.gradle.kts
ui/composeApp/: build.gradle.kts
ui/composeApp/src/main/kotlin/sfarzo/: HelloView.kt  Keyboard.kt  MainView.kt  PluginState.kt  PluginUI.kt  Toolbar.kt  VuMeter.kt  main.kt
ui/gradle/: libs.versions.toml
